# src/routes/user/user.docs.ts
@@ -2,49 +2,39 @@ import z from "zod";
 
 export const createUserDoc = {
   schema: {
-    tags: ["users"],
+    tags: ["authentications"],
     description: "Create a new user",
     operationId: "createUser",
-    body: z.object({ name: z.string() }),
+    body: z.object({
+      name: z.string(),
+      email: z.string().email(),
+      password: z.string().min(6),
+    }),
     response: {
-      201: z.object({ id: z.string(), name: z.string() }),
+      201: z.object({
+        id: z.string(),
+        name: z.string(),
+        email: z.string(),
+        password: z.string(),
+      }),
+      500: z.object({ message: z.string() }),
     },
   },
 };
 
-export const getUsersDoc = {
+export const loginUserDoc = {
   schema: {
-    tags: ["users"],
-    description: "Get all users",
-    operationId: "getUsers",
+    tags: ["authentications"],
+    description: "Login user",
+    operationId: "loginUser",
+    body: z.object({
+      email: z.string().email(),
+      password: z.string().min(6),
+    }),
     response: {
-      200: z.array(z.object({ id: z.string(), name: z.string() })),
-    },
-  },
-};
-
-export const getUserByIdDoc = {
-  schema: {
-    tags: ["users"],
-    description: "Get user by id",
-    operationId: "getUserById",
-    params: z.object({ id: z.string() }),
-    response: {
-      200: z.object({ id: z.string(), name: z.string() }),
+      200: z.string(),
       404: z.object({ message: z.string() }),
-    },
-  },
-};
-
-export const deleteUserByIdDoc = {
-  schema: {
-    tags: ["users"],
-    description: "Delete user by id",
-    operationId: "deleteUserById",
-    params: z.object({ id: z.string() }),
-    response: {
-      200: z.object({ message: z.string() }),
-      404: z.object({ message: z.string() }),
+      500: z.object({ message: z.string() }),
     },
   },
 };
